--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Escape Game</title>
+<title>Il Patatesoro</title>
 <link rel="manifest" href="manifest.json">
 <style>
   body {
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-<h1>Escape Game</h1>
+<h1>Il PataTesoro</h1>
 
 <button id="btnCamera" class="rosso" onclick="sbloccaCamera()">CAMERA</button>
 <button id="btnSgabuzzino" class="rosso" onclick="sbloccaSgabuzzino()">SGABUZZINO</button>
